# superstream.py

./: .gitignore  Jenkinsfile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
example/: consumer.py  producer.py
examples/: consumer.py  producer.py
superstream/: __init__.py  client.py  connection.py  constants.py  consumer_interceptor.py  core.py  exceptions.py  factory.py  interceptors.py  manager.py  producer_interceptor.py  serialization.py  std.py  subscription.py  types.py  update_manager.py  utils.py
tests/: test_serialization.py
