[project]
name = "superstream"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dev", email = "placeholder@temp.mail"},
]
dependencies = [
    "pydantic>=2.6.3",
    "nats-py>=2.7.2",
    "protobuf>=4.25.3",
    "asyncio>=3.4.3",
    "confluent-kafka>=2.3.0",
    "requests>=2.31.0",
    "jsonschema>=4.21.1",
    "nest-asyncio>=1.6.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
pytest = [
    "pytest>=8.0.2",
    "pytest-mock>=3.12.0",
]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest"
lint = "ruff check ."
fmt = "ruff format ."

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py38"
src = ["superstream"]

[tool.ruff.lint]
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
extend-ignore = [
    "B018",
    "B019",
    "RUF018"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


